Redo of logos, reduced dots under cards to 20px below tallest card, fixed size of round button in header on mobile/tablet. (Global #5, Index #1, Global #10)

--- a/source/index.html
+++ b/source/index.html
@@ -5,25 +5,25 @@ title: PDF Library | Adobe Document Services
 
 <div class="main">
 
-  <section class="slab dct-sdk">    
+  <section class="slab dct-sdk">
     <!-- slab-animation -->
     <!-- <div id="flahes" class="flash-dots"></div> -->
     <div id="stage" class="slab-animated-item-container">
 
       <div id="flashes" class="flash-dots-container">
         <div class="animate-bkg"> </div>
-    </div>
+      </div>
 
       <div class="slab-animated-item-wrapper">
         <div class="animated-items">
-              <img id="laptop" src="assets/img/slab-animate/laptop_2x.png" id="" class="laptop"/>
-              <img id="lp-pointer" src="assets/img/slab-animate/laptop_convert.svg" id="" class="lp-pointer"/>
+          <img id="laptop" src="assets/img/slab-animate/laptop_2x.png" id="" class="laptop" />
+          <img id="lp-pointer" src="assets/img/slab-animate/laptop_convert.svg" id="" class="lp-pointer" />
 
-              <img id="ipad" src="assets/img/slab-animate/ipad_2x.png" id="" class="ipad"/>
-              <img id="ipad-pointer" src="assets/img/slab-animate/ipad_comment_action.svg" id="" class="ipad-pointer"/>
+          <img id="ipad" src="assets/img/slab-animate/ipad_2x.png" id="" class="ipad" />
+          <img id="ipad-pointer" src="assets/img/slab-animate/ipad_comment_action.svg" id="" class="ipad-pointer" />
 
-              <img id="phone" src="assets/img/slab-animate/phone_2x.png" id="" class="phone"/>
-              <img id="phone-pointer" src="assets/img/slab-animate/phone_combine_action.svg" id="" class="phone-pointer"/>
+          <img id="phone" src="assets/img/slab-animate/phone_2x.png" id="" class="phone" />
+          <img id="phone-pointer" src="assets/img/slab-animate/phone_combine_action.svg" id="" class="phone-pointer" />
         </div>
       </div>
     </div>
@@ -120,7 +120,7 @@ title: PDF Library | Adobe Document Services
               <h4>Password protect the PDF</h4>
               <p class="work-flow-menu-support-copy">
                 Password protect the PDF, including static and dynamic HTML; Microsoft Word, PowerPoint, and Excel; as well as text, image, and, Zip</p>
-                <a href="#" class="button-link">See Documentation</a>
+              <a href="#" class="button-link">See Documentation</a>
 
             </div>
           </li>
@@ -147,7 +147,7 @@ title: PDF Library | Adobe Document Services
 
       <div id="code-screen" class="work-flow_code">
         <!-- We're not displaying copy above the code section on the home page-->
-       <!--<div id="sdk-support" class="menu-item-info-content">
+        <!--<div id="sdk-support" class="menu-item-info-content">
           <div class="work-flow-menu-support">
             <h4>Create PDF from Word</h4>
             <p>Create PDFs from a variety of formats, including static and dynamic HTML; Microsoft Word, PowerPoint, and Excel; as well as text, image, and, Zip</p>
@@ -182,13 +182,13 @@ title: PDF Library | Adobe Document Services
         </p>
 
         <p>
-          &ldquo;Adobe Document Services helped us extend K2’s intelligent process automation solution to enable 
-          integrated PDF document creation with a rich, interactive web experience for document review, 
-          approval, and e-signature processes with Adobe Sign. Our developers were able to easily extend K2 
-          workflows that collect information from multiple data sources using Adobe Document Services APIs, 
+          &ldquo;Adobe Document Services helped us extend K2’s intelligent process automation solution to enable
+          integrated PDF document creation with a rich, interactive web experience for document review,
+          approval, and e-signature processes with Adobe Sign. Our developers were able to easily extend K2
+          workflows that collect information from multiple data sources using Adobe Document Services APIs,
           enabling us to quickly deliver a solution for our customers to automate their document
           -oriented business processes in
-           a more secure and scalable way.&rdquo;
+          a more secure and scalable way.&rdquo;
         </p>
         <p>
           <strong>– Alex Cobb, VP Product Management, K2</strong>
@@ -203,19 +203,19 @@ title: PDF Library | Adobe Document Services
         </p>
 
         <p>
-          &ldquo;With the 99U Conference shifting to an all-virtual format this year, we wanted to make all aspects of the 
-          event accessible to our attendees — especially The Creative Self Workbook, a workbook offering a 
-          chance for deep self-discovery and exploration. The Adobe PDF Embed API allowed us to create an 
-          accessible, seamless PDF experience with live form filling, notes, drawing, downloading, and printing 
+          &ldquo;With the 99U Conference shifting to an all-virtual format this year, we wanted to make all aspects of the
+          event accessible to our attendees — especially The Creative Self Workbook, a workbook offering a
+          chance for deep self-discovery and exploration. The Adobe PDF Embed API allowed us to create an
+          accessible, seamless PDF experience with live form filling, notes, drawing, downloading, and printing
           options with just a few lines of code.&rdquo;
         </p>
         <p>
-         <strong>– Andrea Rosen, Head of 99U</strong>
+          <strong>– Andrea Rosen, Head of 99U</strong>
         </p>
 
       </div>
 
-      
+
       <div class="card">
 
         <p>
@@ -223,15 +223,15 @@ title: PDF Library | Adobe Document Services
         </p>
 
         <p>
-          &ldquo;InfoDesk provides AI-driven technology and tools that enable organizations to make the smartest 
-          decisions confidently. This involves delivering highly relevant insights to our customers in a format that 
-          suits them best so they can harness the value of their information. By using Adobe’s Document Service 
-          API, our customers can easily convert PDF reports to PowerPoint for use in client presentations and 
-          internal stakeholder meetings. At InfoDesk, we are always looking for ways to add value for our clients 
+          &ldquo;InfoDesk provides AI-driven technology and tools that enable organizations to make the smartest
+          decisions confidently. This involves delivering highly relevant insights to our customers in a format that
+          suits them best so they can harness the value of their information. By using Adobe’s Document Service
+          API, our customers can easily convert PDF reports to PowerPoint for use in client presentations and
+          internal stakeholder meetings. At InfoDesk, we are always looking for ways to add value for our clients
           and Adobe enables us to do exactly that.&rdquo;
         </p>
         <p>
-         <strong>– Lynn Epstein, COO, InfoDesk</strong>
+          <strong>– Lynn Epstein, COO, InfoDesk</strong>
         </p>
 
       </div>
@@ -242,15 +242,24 @@ title: PDF Library | Adobe Document Services
 
 
 
- <!-- customer -->
- <section class="customer">
-  <div class="customer-container">
-    <img src="assets/img/logo_acumatica.png">
-    <img src="assets/img/customer-logo-goldmine_lrg.png">
-    <img src="assets/img/customer-logo_socialstatus_leg.png">
-    <img class="broadsign" src="assets/img/logo_broadsign.png">
-  </div>
-</section> 
+  <!-- customer -->
+  <section class="customer">
+    <div class="customer-container card-slider-container-logos">
+
+      <div class="card">
+        <img src="assets/img/logos_01.png">
+      </div>
+      <div class="card">
+        <img src="assets/img/logos_02.png">
+      </div>
+      <div class="card">
+        <img src="assets/img/logos_03.png">
+      </div>
+      <div class="card">
+        <img src="assets/img/logos_04.png">
+      </div>
+    </div>
+  </section>
 
 
 
