fix missing OCR content

--- a/source/tools-sdk.html
+++ b/source/tools-sdk.html
@@ -86,8 +86,8 @@ active: tools-sdk
             <!-- Shared with code area -->
             <div id="OCR" class="work-flow-menu-support work-flow-support-mode-mobile">
               <h4>OCR</h4>
-              <p class="work-flow-menu-support-copy">Recognize Text, including static and dynamic HTML; Microsoft Word, PowerPoint,
-             and Excel; as well as text, image, and, Zip</p>
+              <p class="work-flow-menu-support-copy">
+                Use built-in optical character recognition (OCR) to convert images to text and enable document searching</p>
               <a href="#" class="button-link">See sample code</a>
             </div>
           </li>
