--- a/source/index.html
+++ b/source/index.html
@@ -72,7 +72,7 @@ active: home
     <div class="work-flow-container">
       <div id="home-menu" class="work-flow_menu">
         <ul>
-          <li class="dctsdk active">
+          <li id="create" class="dctsdk active">
             <div class="work-flow-menu-item active">
               <div class="chev-arrow-right"></div>
               <div class="shadow-box dctsdk">
@@ -89,7 +89,7 @@ active: home
             </div>
           </li>
 
-          <li class="dctsdk">
+          <li id="combine" class="dctsdk">
             <div class="work-flow-menu-item">
               <div class="chev-arrow-right"></div>
               <div class="shadow-box dctsdk">
@@ -98,7 +98,7 @@ active: home
               </div>
             </div>
             <!-- Shared with code area -->
-            <div id="export" class="work-flow-menu-support work-flow-support-mode-mobile">
+            <div class="work-flow-menu-support work-flow-support-mode-mobile">
               <h4>Combine multiple PDFs</h4>
               <p class="work-flow-menu-support-copy">
                 Combine multiple PDFs from a variety of formats, including static and dynamic HTML; Microsoft Word, PowerPoint,
@@ -108,7 +108,7 @@ active: home
 
             </div>
           </li>
-          <li class="dctsdk">
+          <li id="protect" class="dctsdk">
             <div class="work-flow-menu-item">
               <div class="chev-arrow-right"></div>
               <div class="shadow-box dctsdk">
@@ -117,7 +117,7 @@ active: home
               </div>
             </div>
             <!-- Shared with code area -->
-            <div id="pdf-protect" class="work-flow-menu-support work-flow-support-mode-mobile">
+            <div class="work-flow-menu-support work-flow-support-mode-mobile">
               <h4>Password protect the PDF</h4>
               <p class="work-flow-menu-support-copy">
                 Password protect the PDF, including static and dynamic HTML; Microsoft Word, PowerPoint, and Excel; as well as text, image, and, Zip</p>
@@ -125,7 +125,7 @@ active: home
 
             </div>
           </li>
-          <li class="dctsdk">
+          <li id="embed" class="dctsdk">
             <div class="work-flow-menu-item">
               <div class="chev-arrow-right"></div>
               <div class="shadow-box dctsdk">
@@ -134,7 +134,7 @@ active: home
               </div>
             </div>
             <!-- Shared with code area -->
-            <div id="pdf-embed" class="work-flow-menu-support work-flow-support-mode-mobile">
+            <div class="work-flow-menu-support work-flow-support-mode-mobile">
               <h4>Embed PDF for viewing and analytics</h4>
               <p class="work-flow-menu-support-copy">Embed PDF for viewing and analytics, including static and dynamic HTML; Microsoft Word, PowerPoint, and Excel; as well as text, image, and, Zip</p>
               <a href="#" class="button-link">See Documentation</a>
@@ -148,18 +148,19 @@ active: home
 
       <div id="code-screen" class="work-flow_code">
         <!-- We're not displaying copy above the code section on the home page-->
-        <!--<div id="sdk-support" class="menu-item-info-content">
-          <div class="work-flow-menu-support">
-            <h4>Create PDF from Word</h4>
-            <p>Create PDFs from a variety of formats, including static and dynamic HTML; Microsoft Word, PowerPoint, and Excel; as well as text, image, and, Zip</p>
-
-            <p><a title="See documentation" alt="See documentation" id="see_docs" href="#" class="button-link">See documentation</a></p>
-
+        <div id="sdk-support" class="menu-item-info-content">
+          <!-- <div class="work-flow-menu-support">
+            <h4>Create a PDF File</h4>
+            <p class="work-flow-menu-support-copy">Create PDFs from a variety of formats, including static and dynamic HTML; Microsoft Word, PowerPoint, and Excel; as well as text, image, and, Zip</p>
+            <a href="https://www.adobe.com/devnet-docs/dcsdk_io/servicesSDK/howtos.html#create-a-pdf-from-static-html" class="button-link">See sample code</a>
+          </div> -->
+          <div class="code-viewer-wrapper">
+              <!-- Code Viewer -->
+              {% include code-sample.html %}
+              <!-- /Code Viewer -->
           </div>
-        </div>-->
-        <div class="sdk-embed-wrapper">
-          <img src="assets/wfl-placeholder.jpg" />
         </div>
+  
       </div>
 
     </div>
