--- a/source/tools-sdk.html
+++ b/source/tools-sdk.html
@@ -316,9 +316,9 @@ active: tools-sdk
             Download ready to run samples for Node.js, Java, and .NET
           </p>
           <p class="gs-callout-item">
-            <a title="Node.js" alt="Node.js" href="#" class="button-link">Node.js</a>
-            <a title="Java" alt="Java" href="#" class="button-link">Java</a>
-            <a title=".Net" alt=".Net" href="#" class="button-link">.Net</a>
+            <a title="Node.js" alt="Node.js" href="#" class="button-link step2">Node.js</a>
+            <a title="Java" alt="Java" href="#" class="button-link step2">Java</a>
+            <a title=".Net" alt=".Net" href="#" class="button-link  step2">.Net</a>
           </p>
         </div>
       <li>
