added new logos for cliders

--- a/source/index.html
+++ b/source/index.html
@@ -180,7 +180,7 @@ active: home
       <div class="card">
 
         <p>
-          <img src="assets/img/logo-socialstatus-lrg.png">
+          <img src="assets/img/customer-logos/social_status_2x.png">
         </p>
 
         <p>
@@ -195,7 +195,7 @@ active: home
       <div class="card">
 
         <p>
-          <img src="assets/img/logo-socialstatus-lrg.png">
+          <img src="assets/img/customer-logos/acumatica_2x.png"  alt="K2 logo">
         </p>
 
         <p>
@@ -210,7 +210,7 @@ active: home
       <div class="card">
 
         <p>
-          <img src="assets/img/logo-socialstatus-lrg.png">
+          <img src="assets/img/customer-logos/k2_2x.png"  alt="K2 logo">
         </p>
 
         <p>
@@ -231,7 +231,7 @@ active: home
       <div class="card">
 
         <p>
-          <img src="assets/img/logo-socialstatus-lrg.png">
+          <img src="assets/img/customer-logos/ninetynine_u_2x.png"  alt="K2 logo">
         </p>
 
         <p>
@@ -251,7 +251,7 @@ active: home
       <div class="card">
 
         <p>
-          <img src="assets/img/logo-socialstatus-lrg.png">
+          <img src="assets/img/customer-logos/infodesk_2x.png"  alt="K2 logo">
         </p>
 
         <p>
