imlment cod echanges and copy chris added

--- a/source/tools-sdk.html
+++ b/source/tools-sdk.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: DC Platform Tools SDK
+meta: 
 active: tools-sdk
 ---
 
@@ -12,7 +13,7 @@ active: tools-sdk
   <div class="gradient">
     <section class="header">
       <h1>Use our PDF Tools API for creating, combining,<br>exporting PDFs and more</h1>
-      <h2>with SDKs for popular languages such as Node.js, Java, and .NET</h2>
+      <h2>With SDKs for popular languages such as Node.js, Java, and .NET</h2>
     </section>
 
     <section class="home-card card-slider-container">
@@ -55,7 +56,7 @@ active: tools-sdk
             <div class="work-flow-menu-support work-flow-support-mode-mobile open">
               <h4>Create a PDF File</h4>
               <p class="work-flow-menu-support-copy">Create PDFs from a variety of formats, including static and dynamic HTML; Microsoft Word, PowerPoint, and Excel; as well as text, image, and, Zip</p>
-              <a href="#" class="button-link">See Documentation</a>
+              <a href="https://www.adobe.com/devnet-docs/dcsdk_io/servicesSDK/howtos.html#create-a-pdf-from-static-html" class="button-link">See Documentation</a>
             </div>
           </li>
 
@@ -324,7 +325,7 @@ active: tools-sdk
       <li>
         <div>
           <p>
-            Add credentials to your code and run
+            Add credentials to your code and run!
           </p>
           <p>
             <a title="See documentation" alt="See documentation" href="#" class="button-link">See documentation</a>
@@ -360,7 +361,7 @@ active: tools-sdk
       <h5>Common use cases: Retail sales and invoicing, eLearning systems</h5>
     </div>
 
-    <p>Learn about our <a href="#" class="section-links">PDF Embed API</a> to embed high-fidelity PDFs and control appearance, enable collaboration, and see analytics</p>
+    <p>Learn about our <a href="embed-sdk.html" class="section-links">PDF Embed API</a> to embed high-fidelity PDFs and control appearance, enable collaboration, and see analytics</p>
 
   </section>
   <!-- use case end -->
