Fixing home cards and counter layout

--- a/source/index.html
+++ b/source/index.html
@@ -47,7 +47,7 @@ active: home
       <p>Provide a rich PDF viewing experience and easily enable digital collaboration and document analytics.</p>
       <div class="callout-item">
         <p>
-          <a href="#">Try the demo</a>&nbsp;&nbsp;<a href="#">Get Started</a>
+          <a href="#">Try the demo</a><a href="#">Get Started</a>
         </p>
       </div>
     </div>
@@ -58,7 +58,7 @@ active: home
       <p>Apply OCR to enable searching, easily convert files (HTML to PDF, PDF to Microsoft Word and more), or combine actions to automate workflows.</p>
       <div class="callout-item">
         <p>
-          <a href="#">Learn more</a>&nbsp;&nbsp;<a href="#">Start free trial</a>
+          <a href="#">Learn more</a><a href="#">Start free trial</a>
         </p>
       </div>
     </div>
@@ -161,7 +161,7 @@ active: home
               <!-- /Code Viewer -->
           </div>
         </div>
-  
+
       </div>
 
     </div>
