--- a/source/tools-sdk.html
+++ b/source/tools-sdk.html
@@ -312,8 +312,8 @@ active: tools-sdk
             Download ready to run samples for Node.js, Java, and .NET
           </p>
           <p class="gs-callout-item">
-            <a title="Node.js" alt="Node.js" href="#" class="button-link step2">Node.js</a>
-            <a title="Java" alt="Java" href="#" class="button-link step2">Java</a>
+            <a title="Node.js" alt="Node.js" href="https://github.com/adobe/pdftools-node-sdk-samples" target="_blank" class="button-link step2">Node.js</a>
+            <a title="Java" alt="Java" href="https://github.com/adobe/pdftools-java-sdk-samples" target="_blank" class="button-link step2">Java</a>
             <a title=".Net" alt=".Net" href="#" class="button-link  step2">.Net</a>
           </p>
         </div>
@@ -323,7 +323,7 @@ active: tools-sdk
             Add credentials to your code and run!
           </p>
           <p>
-            <a title="See documentation" alt="See documentation" href="#" class="button-link">See documentation</a>
+            <a title="See documentation" alt="See documentation" href="www.adobe.com/go/pdftoolsapi_doc" target="_blank" class="button-link">See documentation</a>
           </p>
         </div>
       </li>
@@ -356,7 +356,7 @@ active: tools-sdk
       <h5>Common use cases: Retail sales and invoicing, eLearning systems</h5>
     </div>
 
-    <p>Learn about our <a href="embed-sdk.html" class="section-links">PDF Embed API</a> to embed high-fidelity PDFs and control appearance, enable collaboration, and see analytics</p>
+    <p>Learn about our <a href="Pdf-embed.html" class="section-links">PDF Embed API</a> to embed high-fidelity PDFs and control appearance, enable collaboration, and see analytics</p>
 
   </section>
   <!-- use case end -->
