--- a/source/index.html
+++ b/source/index.html
@@ -9,7 +9,6 @@ active: home
 
   <section class="slab dct-sdk">
     <!-- slab-animation -->
-    <!-- <div id="flahes" class="flash-dots"></div> -->
     <div id="stage" class="slab-animated-item-container">
 
       <div id="flashes" class="flash-dots-container">
@@ -47,7 +46,7 @@ active: home
       <p>Provide a rich PDF viewing experience and easily enable digital collaboration and document analytics.</p>
       <div class="callout-item">
         <p>
-          <a href="https://www.adobe.com/go/pdfEmbedAPI_demo" target="_blank">Try the demo</a><a href="https://www.adobe.com/go/dcsdks_credentials" target="_blank">Get Started</a>
+          <a href="https://www.adobe.com/go/pdfEmbedAPI_demo" target="_blank">Try the demo</a>&nbsp;&nbsp;<a href="https://www.adobe.com/go/dcsdks_credentials" target="_blank">Get Started</a>
         </p>
       </div>
     </div>
@@ -58,7 +57,7 @@ active: home
       <p>Apply OCR to enable searching, easily convert files (HTML to PDF, PDF to Microsoft Word and more), or combine actions to automate workflows.</p>
       <div class="callout-item">
         <p>
-          <a href="Pdf-tools.htm">Learn more</a><a href="#">Start free trial</a>
+          <a href="Pdf-tools.htm">Learn more</a>&nbsp;&nbsp;<a href="#">Start free trial</a>
         </p>
       </div>
     </div>
