renamed pages, add 17px font to usecase h4

--- a/source/pdf-tools.html
+++ b/source/pdf-tools.html
@@ -356,7 +356,7 @@ active: tools-sdk
       <h5>Common use cases: Retail sales and invoicing, eLearning systems</h5>
     </div>
 
-    <p>Learn about our <a href="Pdf-embed.html" class="section-links">PDF Embed API</a> to embed high-fidelity PDFs and control appearance, enable collaboration, and see analytics</p>
+    <p>Learn about our <a href="pdf-embed.html" class="section-links">PDF Embed API</a> to embed high-fidelity PDFs and control appearance, enable collaboration, and see analytics</p>
 
   </section>
   <!-- use case end -->
