--- a/source/pdf-embed.html
+++ b/source/pdf-embed.html
@@ -250,7 +250,7 @@ active: embed-sdk
       <h5>Common use cases: Financial reports, real estate and legal transactions</h5>
     </div>
 
-    <p>Learn about our <a href="Pdf-tools.html" class="section-links">PDF Tools API</a> for programmatic document manipulation</p>
+    <p>Learn about our <a href="pdf-tools.html" class="section-links">PDF Tools API</a> for programmatic document manipulation</p>
 
   </section>
   <!-- use case end -->
