added contact link

--- a/source/index.html
+++ b/source/index.html
@@ -303,7 +303,7 @@ active: home
       <div class="dcs-help-container">
         <h3>We're ready to help</h3>
         <p>
-          Have questions about the Document Services APIs? <a href="#">Contact us</a>
+          Have questions about the Document Services APIs? <a href="www.adobe.com/go/pdftoolsapi_requestform" target="_blank">Contact us</a>
         </p>
 
         <p>
