incorporate new working top nav, and Chris Haff code sample file

--- a/source/index.html
+++ b/source/index.html
@@ -57,7 +57,7 @@ active: home
       <p>Apply OCR to enable searching, easily convert files (HTML to PDF, PDF to Microsoft Word and more), or combine actions to automate workflows.</p>
       <div class="callout-item">
         <p>
-          <a href="Pdf-tools.htm">Learn more</a><a href="#">Start free trial</a>
+          <a href="Pdf-tools.htm">Learn more</a><a href="https://www.adobe.com/go/dcsdks_credentials" target="_blank">Start free trial</a>
         </p>
       </div>
     </div>
@@ -293,10 +293,6 @@ active: home
   </section>
 
 
-
-
-
-
   <!-- help -->
   <section class="dcs-help">
     <div class="dcs-help-wrapper">
@@ -307,7 +303,7 @@ active: home
         </p>
 
         <p>
-          <a href="#" class="button-link">
+          <a  href="www.adobe.com/go/pdftoolsapi_forum" target="_blank" class="button-link">
             Go to the Adobe Forum
           </a>
         </p>
