--- a/source/pdf-embed.html
+++ b/source/pdf-embed.html
@@ -11,26 +11,26 @@ active: embed-sdk
   <div class="gradient">
     <section class="header">
       <h1>Use our free JavaScript API to embed high-fidelity PDFs</h1>
-      <h2>Control appearance, enable collaboration, and see analytics <span class="xl-only"><a title="Try the demo" alt="Try the demo" id="try_demo" href="#" class="button-link">Try the demo</a></span></h2>
+      <h2>Control appearance, enable collaboration, and see analytics <span class="xl-only"><a title="Try the demo" alt="Try the demo" id="try_demo" href="https://www.adobe.com/go/pdfEmbedAPI_demo" target="_blank" class="button-link">Try the demo</a></span></h2>
       <span class="mobile-only"><a title="Try the demo" alt="Try the demo" id="try_demo" href="https://www.adobe.com/go/pdfEmbedAPI_demo" class="button-link">Try the demo</a></span>
     </section>
 
 
     <section class="home-card card-slider-container">
       <div class="card blanche">
-        <div class="card-icon"><img src="assets/svg/accurate_rendering.svg"></div>
+        <div class="card-icon  push-down"><img src="assets/svg/accurate_rendering.svg" class="embed-icon-1"></div>
         <h2>Accurate, consistent PDF rendering</h2>
         <p>Whether on dynamic or static pages, deliver the highest quality PDF rendering available</p>
       </div>
 
       <div class="card blanche ">
-        <div class="card-icon push-down"><img src="assets/svg/customizable_experience.svg"></div>
+        <div class="card-icon push-down"><img src="assets/svg/customizable_experience.svg" class="embed-icon-2"></div>
         <h2>Customizable user experience</h2>
         <p>Choose exactly how to display a PDF and use the callbacks and annotations APIs to provide programmatic control and enable digital collaboration</p>
       </div>
 
       <div class="card blanche">
-        <div class="card-icon push-down"><img src="assets/svg/analytics.svg"></div>
+        <div class="card-icon push-down"><img src="assets/svg/analytics.svg" class="embed-icon-3"></div>
         <h2>Analytics on PDF usage</h2>
         <p>Use analytics to understand how users interact with PDFs, including time spent on a page and searches</p>
       </div>
@@ -155,7 +155,7 @@ active: embed-sdk
             <div class="work-flow-menu-support">
               <h4>Embed Modes</h4>
               <p class="work-flow-menu-support-copy">Embed Modes, including static and dynamic HTML; Microsoft Word, PowerPoint, and Excel; as well as text, image, and, Zip</p>
-              <a href="#" class="button-link">See Documentation</a>              
+              <a href="https://www.adobe.com/go/pdfembedapi_docs" target="_blank" class="button-link">See Documentation</a>              
             </div> 
 
             <div class="code-viewer-wrapper">
@@ -254,5 +254,29 @@ active: embed-sdk
 
   </section>
   <!-- use case end -->
+
+
+
+
+    <!-- help -->
+    <section class="dcs-help">
+      <div class="dcs-help-wrapper">
+        <div class="dcs-help-container">
+          <h3>We're ready to help</h3>
+          <p>
+            Have questions about the Document Services APIs? <a href="www.adobe.com/go/pdftoolsapi_requestform" target="_blank">Contact us</a>
+          </p>
+  
+          <p>
+            <a href="www.adobe.com/go/pdftoolsapi_forum" target="_blank" class="button-link">
+              Go to the Adobe Forum
+            </a>
+          </p>
+  
+  
+          <div class="dcs-help-img"><img src="assets/img/dcsdk.png"></div>
+        </div>
+      </div>
+    </section>
 
 </div>
