added the top nav scss file reference

--- a/source/pdf-embed.html
+++ b/source/pdf-embed.html
@@ -264,11 +264,11 @@ active: embed-sdk
         <div class="dcs-help-container">
           <h3>We're ready to help</h3>
           <p>
-            Have questions about the Document Services APIs? <a href="www.adobe.com/go/pdftoolsapi_requestform" target="_blank">Contact us</a>
+            Have questions about the Document Services APIs? <a href="https://www.adobe.com/go/pdftoolsapi_requestform" target="_blank">Contact us</a>
           </p>
   
           <p>
-            <a href="www.adobe.com/go/pdftoolsapi_forum" target="_blank" class="button-link">
+            <a href="https://www.adobe.com/go/pdftoolsapi_forum" target="_blank" class="button-link">
               Go to the Adobe Forum
             </a>
           </p>
